file(GLOB DOC_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/*.gif
	${CMAKE_CURRENT_SOURCE_DIR}/*.png
	${CMAKE_CURRENT_SOURCE_DIR}/LICENSE*.txt
	${CMAKE_CURRENT_SOURCE_DIR}/LGPL.txt
	${CMAKE_CURRENT_SOURCE_DIR}/index.html
	${CMAKE_CURRENT_SOURCE_DIR}/virtualgl.css)

install(FILES ${DOC_FILES} DESTINATION ${VGL_DOCDIR})

install(FILES ${CMAKE_SOURCE_DIR}/ChangeLog.txt DESTINATION ${VGL_DOCDIR})
